# phone-caller

./: .env.example  .gitignore  README.md  pyproject.toml
src/tkbase_phone_caller/: __init__.py  __main__.py  agent.py  caller.py  drive_storage.py  meet.py  notion_logger.py  phone_router.py  prompts.py  rate_limiter.py  webhook.py
src/tkbase_phone_caller/static/: dashboard.html
